// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render correctly with bottom labelPosition 1`] = `
.c7 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c4 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  background-color: transparent;
  border-color: #13181D;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c0 * {
  cursor: pointer;
}

.c0 .c1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 1.6rem 0;
}

.c0 .c6 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0:hover .c3 {
  border-color: #1A6BF0;
}

.c5 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c5:focus {
  outline: none;
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
    >
      Dummy
    </span>
    <div
      class="c3 c4"
    >
      <input
        class="c5"
        id="Dummy"
        type="checkbox"
      />
      <svg
        class="c6 c7"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked false and active state 1`] = `
.c5 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  background-color: transparent;
  border-color: #13181D;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 * {
  cursor: pointer;
}

.c0 .sc-AxiKw {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c0 .c4 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0:hover .c1 {
  border-color: #1A6BF0;
}

.c3 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c3:focus {
  outline: none;
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
  >
    
    <div
      class="c1 c2"
    >
      <input
        class="c3"
        id=""
        type="checkbox"
      />
      <svg
        class="c4 c5"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked false and disabled state 1`] = `
.c4 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c4 * {
  fill-opacity: 1;
  fill: #607890;
}

.c1 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  background-color: transparent;
  border-color: #98A7B7;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 * {
  cursor: not-allowed;
}

.c0 .sc-AxiKw {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #98A7B7;
  padding: 0 1.6rem;
}

.c0 .c3 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c2 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c2:focus {
  outline: none;
}

<div>
  <label
    class="c0"
    disabled=""
    for=""
    id="-wrapper"
  >
    
    <div
      class="c1"
      disabled=""
    >
      <input
        class="c2"
        disabled=""
        id=""
        type="checkbox"
      />
      <svg
        class="c3 c4"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked false and hasError state 1`] = `
.c5 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  background-color: transparent;
  border-color: #cc0000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 * {
  cursor: pointer;
}

.c0 .sc-AxiKw {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c0 .c4 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0:hover .c1 {
  border-color: #D11A1A;
}

.c3 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c3:focus {
  outline: none;
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
  >
    
    <div
      class="c1 c2"
    >
      <input
        class="c3"
        id=""
        type="checkbox"
      />
      <svg
        class="c4 c5"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked false and indeterminate state 1`] = `
.c5 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  border-color: #005AEE;
  background-color: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c4 * {
  fill: #ffffff;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 * {
  cursor: pointer;
}

.c0 .sc-AxiKw {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c0 .c4 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c0:hover .c1 {
  border-color: #1A6BF0;
  background-color: #1A6BF0;
}

.c3 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c3:focus {
  outline: none;
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
  >
    
    <div
      class="c1 c2"
    >
      <input
        class="c3"
        id=""
        type="checkbox"
      />
      <svg
        class="c4 c5"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 11h10c.55 0 1 .45 1 1s-.45 1-1 1H7c-.55 0-1-.45-1-1s.45-1 1-1z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked true and active state 1`] = `
.c5 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  border-color: #005AEE;
  background-color: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c4 * {
  fill: #ffffff;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 * {
  cursor: pointer;
}

.c0 .sc-AxiKw {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c0 .c4 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c0:hover .c1 {
  border-color: #1A6BF0;
  background-color: #1A6BF0;
}

.c3 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c3:focus {
  outline: none;
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
  >
    
    <div
      class="c1 c2"
    >
      <input
        checked=""
        class="c3"
        id=""
        type="checkbox"
      />
      <svg
        class="c4 c5"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked true and disabled state 1`] = `
.c4 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c4 * {
  fill-opacity: 1;
  fill: #607890;
}

.c1 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  border-color: #dfe4e9;
  background-color: #dfe4e9;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c3 * {
  fill: #98A7B7;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 * {
  cursor: not-allowed;
}

.c0 .sc-AxiKw {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #98A7B7;
  padding: 0 1.6rem;
}

.c0 .c3 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c2 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c2:focus {
  outline: none;
}

<div>
  <label
    class="c0"
    disabled=""
    for=""
    id="-wrapper"
  >
    
    <div
      class="c1"
      disabled=""
    >
      <input
        checked=""
        class="c2"
        disabled=""
        id=""
        type="checkbox"
      />
      <svg
        class="c3 c4"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked true and hasError state 1`] = `
.c5 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  border-color: #cc0000;
  background-color: #cc0000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c4 * {
  fill: #ffffff;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 * {
  cursor: pointer;
}

.c0 .sc-AxiKw {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c0 .c4 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c0:hover .c1 {
  border-color: #D11A1A;
  background-color: #D11A1A;
}

.c3 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c3:focus {
  outline: none;
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
  >
    
    <div
      class="c1 c2"
    >
      <input
        checked=""
        class="c3"
        id=""
        type="checkbox"
      />
      <svg
        class="c4 c5"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked true and indeterminate state 1`] = `
.c5 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  border-color: #005AEE;
  background-color: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c4 * {
  fill: #ffffff;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 * {
  cursor: pointer;
}

.c0 .sc-AxiKw {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c0 .c4 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c0:hover .c1 {
  border-color: #1A6BF0;
  background-color: #1A6BF0;
}

.c3 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c3:focus {
  outline: none;
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
  >
    
    <div
      class="c1 c2"
    >
      <input
        checked=""
        class="c3"
        id=""
        type="checkbox"
      />
      <svg
        class="c4 c5"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 11h10c.55 0 1 .45 1 1s-.45 1-1 1H7c-.55 0-1-.45-1-1s.45-1 1-1z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with left labelPosition 1`] = `
.c7 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c4 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  background-color: transparent;
  border-color: #13181D;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 * {
  cursor: pointer;
}

.c0 .c1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c0 .c6 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0:hover .c3 {
  border-color: #1A6BF0;
}

.c5 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c5:focus {
  outline: none;
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
    >
      Dummy
    </span>
    <div
      class="c3 c4"
    >
      <input
        class="c5"
        id="Dummy"
        type="checkbox"
      />
      <svg
        class="c6 c7"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with right labelPosition 1`] = `
.c7 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c4 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  background-color: transparent;
  border-color: #13181D;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 * {
  cursor: pointer;
}

.c0 .c1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c0 .c6 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0:hover .c3 {
  border-color: #1A6BF0;
}

.c5 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c5:focus {
  outline: none;
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
    >
      Dummy
    </span>
    <div
      class="c3 c4"
    >
      <input
        class="c5"
        id="Dummy"
        type="checkbox"
      />
      <svg
        class="c6 c7"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with top labelPosition 1`] = `
.c7 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c4 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  background-color: transparent;
  border-color: #13181D;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 * {
  cursor: pointer;
}

.c0 .c1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 1.6rem 0;
}

.c0 .c6 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0:hover .c3 {
  border-color: #1A6BF0;
}

.c5 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c5:focus {
  outline: none;
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
    >
      Dummy
    </span>
    <div
      class="c3 c4"
    >
      <input
        class="c5"
        id="Dummy"
        type="checkbox"
      />
      <svg
        class="c6 c7"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
  </label>
</div>
`;
